[gd_scene load_steps=10 format=2]

[ext_resource path="res://hsz/ui/store/store.png" type="Texture" id=1]
[ext_resource path="res://hsz/items/icons/millet.png" type="Texture" id=2]
[ext_resource path="res://hsz/items/icons/armor.png" type="Texture" id=3]
[ext_resource path="res://hsz/ui/themes/store_theme.tres" type="Theme" id=4]
[ext_resource path="res://hsz/items/icons/compass.png" type="Texture" id=5]
[ext_resource path="res://hsz/ui/store/store.gd" type="Script" id=6]

[sub_resource type="Animation" id=1]
resource_name = "FadeIn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "FadeOut"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Store" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -480.0
margin_top = -270.0
margin_right = 480.0
margin_bottom = 270.0
texture = ExtResource( 1 )

[node name="Goods" type="GridContainer" parent="TextureRect"]
anchor_left = 0.7
anchor_top = 0.5
anchor_right = 0.7
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -240.0
margin_right = 255.0
margin_bottom = 235.0
custom_constants/vseparation = 20
custom_constants/hseparation = 30

[node name="Commodity1" type="HBoxContainer" parent="TextureRect/Goods"]
margin_right = 479.0
margin_bottom = 104.0
custom_constants/separation = 20

[node name="View" type="VBoxContainer" parent="TextureRect/Goods/Commodity1"]
margin_right = 75.0
margin_bottom = 104.0

[node name="Icon" type="TextureRect" parent="TextureRect/Goods/Commodity1/View"]
margin_right = 75.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 2 )
expand = true

[node name="Price" type="Label" parent="TextureRect/Goods/Commodity1/View"]
margin_top = 79.0
margin_right = 75.0
margin_bottom = 104.0
theme = ExtResource( 4 )
text = "15铜/1个"
align = 1

[node name="Intro" type="Label" parent="TextureRect/Goods/Commodity1"]
margin_left = 95.0
margin_top = 25.0
margin_right = 415.0
margin_bottom = 78.0
rect_min_size = Vector2( 320, 0 )
size_flags_horizontal = 3
theme = ExtResource( 4 )
text = "使用了神秘配方的饲料，只要是鸡就没有会理由拒绝它"
valign = 1
autowrap = true

[node name="Button1" type="Button" parent="TextureRect/Goods/Commodity1"]
margin_left = 435.0
margin_top = 36.0
margin_right = 479.0
margin_bottom = 67.0
size_flags_vertical = 4
theme = ExtResource( 4 )
text = "购买"

[node name="Commodity2" type="HBoxContainer" parent="TextureRect/Goods"]
visible = false
margin_top = 124.0
margin_right = 479.0
margin_bottom = 228.0
custom_constants/separation = 20

[node name="View" type="VBoxContainer" parent="TextureRect/Goods/Commodity2"]
margin_right = 75.0
margin_bottom = 104.0

[node name="Icon" type="TextureRect" parent="TextureRect/Goods/Commodity2/View"]
margin_right = 75.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 2 )
expand = true

[node name="Price" type="Label" parent="TextureRect/Goods/Commodity2/View"]
margin_top = 79.0
margin_right = 75.0
margin_bottom = 104.0
theme = ExtResource( 4 )
text = "50铜/3个"
align = 1

[node name="Intro" type="Label" parent="TextureRect/Goods/Commodity2"]
margin_left = 95.0
margin_top = 25.0
margin_right = 415.0
margin_bottom = 78.0
rect_min_size = Vector2( 320, 0 )
size_flags_horizontal = 3
theme = ExtResource( 4 )
text = "看起来你对于购买诱饵津津乐道呢，这样吧，给你便宜点"
valign = 1
autowrap = true

[node name="Button2" type="Button" parent="TextureRect/Goods/Commodity2"]
margin_left = 435.0
margin_top = 36.0
margin_right = 479.0
margin_bottom = 67.0
size_flags_vertical = 4
theme = ExtResource( 4 )
text = "购买"

[node name="Commodity3" type="HBoxContainer" parent="TextureRect/Goods"]
margin_top = 124.0
margin_right = 479.0
margin_bottom = 228.0
custom_constants/separation = 20

[node name="View" type="VBoxContainer" parent="TextureRect/Goods/Commodity3"]
margin_right = 75.0
margin_bottom = 104.0

[node name="Icon" type="TextureRect" parent="TextureRect/Goods/Commodity3/View"]
margin_right = 75.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 3 )
expand = true

[node name="Price" type="Label" parent="TextureRect/Goods/Commodity3/View"]
margin_top = 79.0
margin_right = 75.0
margin_bottom = 104.0
theme = ExtResource( 4 )
text = "100铜"
align = 1

[node name="Intro" type="Label" parent="TextureRect/Goods/Commodity3"]
margin_left = 95.0
margin_top = 11.0
margin_right = 415.0
margin_bottom = 92.0
rect_min_size = Vector2( 320, 0 )
size_flags_horizontal = 3
theme = ExtResource( 4 )
text = "外面的那些动物也是很有攻击性的，穿上它吧，我的朋友，这能给你带来一些帮助。
血量最大上限提升至6"
valign = 1
autowrap = true

[node name="Button3" type="Button" parent="TextureRect/Goods/Commodity3"]
margin_left = 435.0
margin_top = 36.0
margin_right = 479.0
margin_bottom = 67.0
size_flags_vertical = 4
theme = ExtResource( 4 )
text = "购买"

[node name="Commodity4" type="HBoxContainer" parent="TextureRect/Goods"]
margin_top = 248.0
margin_right = 479.0
margin_bottom = 352.0
custom_constants/separation = 20

[node name="View" type="VBoxContainer" parent="TextureRect/Goods/Commodity4"]
margin_right = 75.0
margin_bottom = 104.0

[node name="Icon" type="TextureRect" parent="TextureRect/Goods/Commodity4/View"]
margin_right = 75.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 5 )
expand = true

[node name="Price" type="Label" parent="TextureRect/Goods/Commodity4/View"]
margin_top = 79.0
margin_right = 75.0
margin_bottom = 104.0
theme = ExtResource( 4 )
text = "80铜"
align = 1

[node name="Intro" type="Label" parent="TextureRect/Goods/Commodity4"]
margin_left = 95.0
margin_top = 25.0
margin_right = 415.0
margin_bottom = 78.0
rect_min_size = Vector2( 320, 0 )
size_flags_horizontal = 3
theme = ExtResource( 4 )
text = "有时候你也许会发现动物不太方便寻找，试试这个工具吧，它能帮你找到最近的生物"
valign = 1
autowrap = true

[node name="Button4" type="Button" parent="TextureRect/Goods/Commodity4"]
margin_left = 435.0
margin_top = 36.0
margin_right = 479.0
margin_bottom = 67.0
size_flags_vertical = 4
theme = ExtResource( 4 )
text = "购买"

[node name="Quit" type="Button" parent="TextureRect"]
anchor_left = 0.92
anchor_top = 0.95
anchor_right = 0.99
anchor_bottom = 0.99
margin_left = -6.0
margin_top = -10.0
margin_right = 6.0
margin_bottom = 10.0
theme = ExtResource( 4 )
text = "退出"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 1 )
anims/FadeOut = SubResource( 3 )
anims/RESET = SubResource( 2 )

[connection signal="pressed" from="TextureRect/Goods/Commodity1/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="TextureRect/Goods/Commodity2/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="TextureRect/Goods/Commodity3/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="TextureRect/Goods/Commodity4/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="TextureRect/Quit" to="." method="_on_Quit_pressed"]
